--- a/watches.html
+++ b/watches.html
@@ -1,38 +1,59 @@
 <!DOCTYPE html>
 <head>
 	<meta charset="utf-8">
-	<title>Sans</title>
+	<title>Sans_(My)VeryHungryCaterpillar</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" href="css/cssSlide.css">
 	<link href="https://fonts.googleapis.com/css?family=Fira+Mono|Fira+Sans" rel="stylesheet">
-<script type="text/javascript" src="js/modernizr-2.7.1.js"></script>
-<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
-<link rel="apple-touch-icon" href="img/webclip.png">
+	<script type="text/javascript" src="js/modernizr-2.7.1.js"></script>
+	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
+	<link rel="apple-touch-icon" href="img/webclip.png">
 </head>
 
 <body>
 	<div class="w-nav navigation-bar" data-collapse="medium" data-animation="default" data-duration="400" data-contain="1">
 		<div class="w-container">
 			<a class="w-nav-brand brand-link" href="index.html">
-				<h1 class="brand-text">Sans.</h1>
-			</a>
-			<nav class="w-nav-menu navigation-menu" role="navigation">
-				<a class="w-nav-link navigation-link w--current" href="index.html">Work</a>
-				<a class="w-nav-link navigation-link" href="about.html">About</a>
+			<h1 class="brand-text">Sans.</h1></a>
+		<nav class="w-nav-menu navigation-menu" role="navigation">
+			<a style="color:#00bfa5;font-weight:bold;" class="w-nav-link navigation-link" href="index.html">Work</a>
+			<a style="color:silver" class="w-nav-link navigation-link" href="about.html">About</a>
 		</nav>
-			<div class="w-nav-button hamburger-button">
-				<div class="w-icon-nav-menu"></div>
-			</div>
+		<div class="w-nav-button hamburger-button">
+			<div class="w-icon-nav-menu"></div>
 		</div>
+	</div>
 	</div>
 	<div class="w-section section">
 		<div class="w-container">
-			<div class="w-dyn-list">
+			<div class="container">
+    <div id="slides">
+      <img src="img/watches01.png" alt="Valentine's Day and Children's Day">
+      <img src="img/watches02.png" alt="Mother's Day and Grandparent's Day">
+    </div>
+  </div>
+			<div class="photo-info-wrapper">
+				<h1 class="photo-page-title">Thematic Watches</h1>
+				<div class="photo-info-text"></div>
+				<div class="w-richtext photo-text">
+					<p>Thematic watches designed during an internship at the company Macambira &amp; Araújo, for EuroImpala then marketed by TV7dias magazine. <br>The themes were:<br>
+					- Grandparents' Day<br>
+					- Children's Day<br>
+					- Valentine's Day<br>
+					- Mother's Day</p>
+					<p>
+				</div>
+			</div>
+		</div>
+		<div class="w-container all-images">
+			<h1 class="photo-page-title">ALL works</h1>
+			<div class="w-dyn-list gallery-wrapper">
 				<div class="w-dyn-items w-row">
 					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="boyfish.html">
 							<img src="img/boyfish_square.png">
-							<div class="title">O Rapaz e o Peixe</br>The Boy and the Fish</div>
+							<div class="title">O Rapaz e o Peixe<br>The Boy and the Fish</div>
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
@@ -77,7 +98,16 @@
 		<div class="footer-text">&copy; Vera Sans — 2016<br/>All rights reserved</div>
 	</div>
 <script type="text/javascript" src="js/jquery.min.js"></script>
-<script type="text/javascript" src="js/webflow.6a91f4eb8.js"></script>
-
+<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+<script src="js/jquery.slides.min.js"></script>
+<script>
+    $(function() {
+      $('#slides').slidesjs({
+        width: 940,
+        height: 528,
+        navigation: false
+      });
+    });
+ </script>
 </body>
 </html>
