menu fixing + montanha html

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
 				<div class="w-col w-col-6">
 					<div class="w-richtext">
 						<h2>SANS.</h2>
-						<p>A web designer, illustrator & photography lover based in Oporto. <br>She has been part of several projects for Vodafone Portugal and du, an Emirates Integrated Telecommunications Company, in partnership with Apple.</p>
+						<p>A web designer, illustrator & photography lover based in Oporto. <br><br>Since 2014 she has been part of several projects for Vodafone Portugal and du, an Emirates Integrated Telecommunications Company, in partnership with Apple.</p>
 					</div>
 				</div>
 			</div>
