--- a/crua.html
+++ b/crua.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <head>
 	<meta charset="utf-8">
-	<title>Sans@CRUAmag</title>
+	<title>Sans</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
-	<link rel="stylesheet" href="css/cssSlide.css">
 	<link href="https://fonts.googleapis.com/css?family=Fira+Mono|Fira+Sans" rel="stylesheet">
-	<script type="text/javascript" src="js/modernizr-2.7.1.js"></script>
-	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
-	<link rel="apple-touch-icon" href="img/webclip.png">
+<script type="text/javascript" src="js/modernizr-2.7.1.js"></script>
+<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
+<link rel="apple-touch-icon" href="img/webclip.jpg">
 </head>
 
 <body>
@@ -18,9 +17,9 @@
 				<h1 class="brand-text">Sans.</h1>
 			</a>
 			<nav class="w-nav-menu navigation-menu" role="navigation">
-				<a style="color:#00bfa5;font-weight:bold;" class="w-nav-link navigation-link" href="index.html">Work</a>
-				<a style="color:silver" class="w-nav-link navigation-link" href="about.html">About</a>
-			</nav>
+				<a style="color:#00bfa5;font-weight:bold;" class="w-nav-link navigation-link w--current" href="index.html">Work</a>
+				<a class="w-nav-link navigation-link" href="about.html">About</a>
+		</nav>
 			<div class="w-nav-button hamburger-button">
 				<div class="w-icon-nav-menu"></div>
 			</div>
@@ -28,53 +27,42 @@
 	</div>
 	<div class="w-section section">
 		<div class="w-container">
-			<div class="container">
-    <div id="slides">
-      <img src="img/crua01.png" alt="cruaMagIllustration">
-      <img src="img/crua02.png" alt="cruaMagPrint">
-    </div>
-  </div>
-			<div class="photo-info-wrapper">
-				<h1 class="photo-page-title">O Auto da Barca do Inferno</h1>
+			<img src="img/crua01.jpg">
+			<h1 class="photo-page-title">O Auto da Barca do Inferno</br>The act of the Hell's Ship</h1>
 				<div class="w-richtext photo-text">
 					<p>Illustration for CRUA Mag an portuguese online magazine. </br> The illustration came in No.2 on the magazine whose theme was "Vade Retro Satana".
 					The illustration supports an excerpt from the book "O Auto da Barca do Inferno" (The act of the Hell's Ship) from the "Trilogia das Barcas" (Trilogy of the Ships). Written by Gil Vicente, consists on three plays, Auto da Barca do Inferno ("Act of the Hell's Ship"), written 1516; Auto da Barca do Purgatório ("Act of the Purgatory's Ship"), written in 1518; and Auto da Barca da Glória ("Auto of the Heaven's Ship"), written in 1519. These plays combine morality narratives with criticism of 16th-century Portuguese society by placing stereotypical characters on a dock to await the arrival of one of the ships which will take them to their eternal destination. </p>
-					<p>
-				</div>
 			</div>
+			<img src="img/crua02.jpg" style="padding-top:30px">
 		</div>
+	</div>
+			
 		<div class="w-container all-images">
 			<h1 class="photo-page-title">All Works</h1>
 			<div class="w-dyn-list gallery-wrapper">
 				<div class="w-dyn-items w-row">
 					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="boyfish.html">
-							<img src="img/boyfish_square.png">
+							<img src="img/boyfish_square.jpg">
 							<div class="title">O Rapaz e o Peixe</br>The Boy and the Fish</div>
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="caterpillar.html">
-							<img src="img/caterpillar_square.png">
+							<img src="img/caterpillar_square.jpg">
 							<div class="title">(My) Very Hungry Caterpillar</div>
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="crua.html">
-							<img src="img/crua_square.png">
-							<div class="title">O Auto da Barca do Inferno</br>The act of the Hell's Ship</div>
-						</a>
-					</div>
-					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="soskit.html">
-							<img src="img/soskit_square.png">
+							<img src="img/soskit_square.jpg">
 							<div class="title">S.O.S dyslexia kit - for parents and children</div>
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="watches.html">
-							<img src="img/watches_square.png">
-							<div class="title">Thematic Watches</div>
+						<a class="w-inline-block photo-link-block" href="montanha.html">
+							<img src="img/montanha_square.jpg">
+							<div class="title">Webpage</div>
 						</a>
 					</div>
 				</div>
