--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Fira+Mono|Fira+Sans" rel="stylesheet">
 <script type="text/javascript" src="js/modernizr-2.7.1.js"></script>
 <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
-<link rel="apple-touch-icon" href="img/webclip.png">
+<link rel="apple-touch-icon" href="img/webclip.jpg">
 </head>
 
 <body>
@@ -31,32 +31,32 @@
 				<div class="w-dyn-items w-row">
 					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="boyfish.html">
-							<img src="img/boyfish_square.png">
+							<img src="img/boyfish_square.jpg">
 							<div class="title">O Rapaz e o Peixe</br>The Boy and the Fish</div>
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="caterpillar.html">
-							<img src="img/caterpillar_square.png">
+							<img src="img/caterpillar_square.jpg">
 							<div class="title">(My) Very Hungry Caterpillar</div>
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="crua.html">
-							<img src="img/crua_square.png">
+							<img src="img/crua_square.jpg">
 							<div class="title">O Auto da Barca do Inferno</br>The act of the Hell's Ship</div>
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="soskit.html">
-							<img src="img/soskit_square.png">
+							<img src="img/soskit_square.jpg">
 							<div class="title">S.O.S dyslexia kit - for parents and children</div>
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="watches.html">
-							<img src="img/watches_square.png">
-							<div class="title">Thematic Watches</div>
+						<a class="w-inline-block photo-link-block" href="montanha.html">
+							<img src="img/montanha_square.jpg">
+							<div class="title">Webpage</div>
 						</a>
 					</div>
 				</div>
