--- a/soskit.html
+++ b/soskit.html
@@ -1,81 +1,70 @@
 <!DOCTYPE html>
 <head>
 	<meta charset="utf-8">
-	<title>Sans_(My)VeryHungryCaterpillar</title>
+	<title>Sans</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
-	<link rel="stylesheet" href="css/cssSlide.css">
 	<link href="https://fonts.googleapis.com/css?family=Fira+Mono|Fira+Sans" rel="stylesheet">
-	<script type="text/javascript" src="js/modernizr-2.7.1.js"></script>
-	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
-	<link rel="apple-touch-icon" href="img/webclip.png">
+<script type="text/javascript" src="js/modernizr-2.7.1.js"></script>
+<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
+<link rel="apple-touch-icon" href="img/webclip.jpg">
 </head>
 
 <body>
 	<div class="w-nav navigation-bar" data-collapse="medium" data-animation="default" data-duration="400" data-contain="1">
 		<div class="w-container">
 			<a class="w-nav-brand brand-link" href="index.html">
-			<h1 class="brand-text">Sans.</h1></a>
-		<nav class="w-nav-menu navigation-menu" role="navigation">
-			<a style="color:#00bfa5;font-weight:bold;" class="w-nav-link navigation-link" href="index.html">Work</a>
-			<a style="color:silver" class="w-nav-link navigation-link" href="about.html">About</a>
+				<h1 class="brand-text">Sans.</h1>
+			</a>
+			<nav class="w-nav-menu navigation-menu" role="navigation">
+				<a style="color:#00bfa5;font-weight:bold;" class="w-nav-link navigation-link w--current" href="index.html">Work</a>
+				<a class="w-nav-link navigation-link" href="about.html">About</a>
 		</nav>
-		<div class="w-nav-button hamburger-button">
-			<div class="w-icon-nav-menu"></div>
+			<div class="w-nav-button hamburger-button">
+				<div class="w-icon-nav-menu"></div>
+			</div>
 		</div>
-	</div>
 	</div>
 	<div class="w-section section">
 		<div class="w-container">
-			<div class="container">
-    <div id="slides">
-      <img src="img/sosKit01.png" alt="sosKit">
-      <img src="img/sosKit02.png" alt="sosKit">
-      <img src="img/sosKit03.png" alt="sosKit">
-      <img src="img/sosKit04.png" alt="sosKit">
-    </div>
-  </div>
-			<div class="photo-info-wrapper">
-				<h1 class="photo-page-title">S.O.S dyslexia kit - for parents and children</h1>
+			<img src="img/sosKit04.jpg">
+			<h1 class="photo-page-title">S.O.S dyslexia kit - for parents and children</h1>
 				<div class="photo-info-text"></div>
 				<div class="w-richtext photo-text">
-					<p>Project by Sara Miguel for UTAD - University of Trás-os-Montes e Alto Douro, Vila Real, Portugal.<br>Texts by Sara Miguel<br>Illustration and edition by Vera Martins</p>
-					<p>
-				</div>
+					<p>Project by Sara Miguel for UTAD - University of Trás-os-Montes e Alto Douro, Vila Real, Portugal.<br>Texts by Sara Miguel<br>Illustration and edition by me<br> - This handbook is part of a kit, as well as some games and challenges, that was created to help children with dyslexia and their parents to deal with this difficulty.<br>The book tells a story about a girl named Lexia, and her only friend, Mr. Green, a ball of green wool. Lexia has no friends at school, other kids think she's different, so, Mr. Green is helping Lexia surpass her difficulty.</p>
 			</div>
+			<img src="img/sosKit01.jpg" >
+			<img src="img/sosKit02.jpg" >
+			<img src="img/sosKit03.jpg" >
 		</div>
+	</div>
+			
 		<div class="w-container all-images">
 			<h1 class="photo-page-title">All Works</h1>
 			<div class="w-dyn-list gallery-wrapper">
 				<div class="w-dyn-items w-row">
 					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="boyfish.html">
-							<img src="img/boyfish_square.png">
+							<img src="img/boyfish_square.jpg">
 							<div class="title">O Rapaz e o Peixe</br>The Boy and the Fish</div>
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="caterpillar.html">
-							<img src="img/caterpillar_square.png">
+							<img src="img/caterpillar_square.jpg">
 							<div class="title">(My) Very Hungry Caterpillar</div>
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="crua.html">
-							<img src="img/crua_square.png">
+							<img src="img/crua_square.jpg">
 							<div class="title">O Auto da Barca do Inferno</br>The act of the Hell's Ship</div>
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="soskit.html">
-							<img src="img/soskit_square.png">
-							<div class="title">S.O.S dyslexia kit - for parents and children</div>
-						</a>
-					</div>
-					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="watches.html">
-							<img src="img/watches_square.png">
-							<div class="title">Thematic Watches</div>
+						<a class="w-inline-block photo-link-block" href="montanha.html">
+							<img src="img/montanha_square.jpg">
+							<div class="title">Webpage</div>
 						</a>
 					</div>
 				</div>
@@ -86,10 +75,10 @@
 		<div class="w-container">
 			<div>
 				<a class="w-inline-block social-icon-link" href="https://www.instagram.com/verasans/" target="_blank" alt="instagram">
-					<img width="35" src="img/instagram.svg">
+					<img width="35" src="img/instagram.svg" alt="instagram">
 				</a>
 				<a class="w-inline-block social-icon-link" href="mailto:veraifos@gmail.com" alt="contact me">
-					<img width="30" src="img/contact.svg">
+					<img width="30" src="img/contact.svg" alt="contact me">
 				</a>
 			</div>
 		</div>
