--- a/boyfish.html
+++ b/boyfish.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <head>
 	<meta charset="utf-8">
-	<title>Sans_TheBoyAndTheFish</title>
+	<title>Sans</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
-	<link rel="stylesheet" href="css/cssSlide.css">
 	<link href="https://fonts.googleapis.com/css?family=Fira+Mono|Fira+Sans" rel="stylesheet">
-	<script type="text/javascript" src="js/modernizr-2.7.1.js"></script>
-	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
-	<link rel="apple-touch-icon" href="img/webclip.png">
+<script type="text/javascript" src="js/modernizr-2.7.1.js"></script>
+<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
+<link rel="apple-touch-icon" href="img/webclip.jpg">
 </head>
 
 <body>
@@ -18,8 +17,8 @@
 				<h1 class="brand-text">Sans.</h1>
 			</a>
 			<nav class="w-nav-menu navigation-menu" role="navigation">
-				<a style="color:#00bfa5;font-weight:bold;" class="w-nav-link navigation-link" href="index.html">Work</a>
-				<a style="color:silver" class="w-nav-link navigation-link" href="about.html">About</a>
+				<a style="color:#00bfa5;font-weight:bold;" class="w-nav-link navigation-link w--current" href="index.html">Work</a>
+				<a class="w-nav-link navigation-link" href="about.html">About</a>
 		</nav>
 			<div class="w-nav-button hamburger-button">
 				<div class="w-icon-nav-menu"></div>
@@ -28,53 +27,43 @@
 	</div>
 	<div class="w-section section">
 		<div class="w-container">
-			<div class="container">
-    <div id="slides">
-      <img src="img/boyfishAshes.png" alt="ashes">
-      <img src="img/boyfishFamily.png" alt="family">
-      <img src="img/boyfishNecklace.png" alt="necklace">
-    </div>
-  </div>
-			<div class="photo-info-wrapper">
-				<h1 class="photo-page-title">O RAPAZ E O PEIXE</br>(The Boy and the Fish)</h1>
+			<img src="img/boyfishfamily.jpg">
+			<h1 class="photo-page-title">O RAPAZ E O PEIXE</br>(The Boy and the Fish)</h1>
 				<div class="w-richtext photo-text">
 					<p>Set of illustrations to support the making of the film: 'The boy and the fish'. This was the final project of the course of cinema, by the filmmaker Lu&iacute;s Montanha.</p>
 					<p><a href="http://orapazeopeixe.wordpress.com/" target="_blank" class="action-button">LAUNCH PROJECT</a></p>
 				</div>
-			</div>
+			<img src="img/boyfishAshes.jpg" style="padding-top:30px">
+			<img src="img/boyfishNecklace.jpg" style="padding-top:10px">
 		</div>
+	</div>
+
 		<div class="w-container all-images">
 			<h1 class="photo-page-title">All Works</h1>
 			<div class="w-dyn-list gallery-wrapper">
 				<div class="w-dyn-items w-row">
 					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="boyfish.html">
-							<img src="img/boyfish_square.png">
-							<div class="title">O Rapaz e o Peixe</br>The Boy and the Fish</div>
-						</a>
-					</div>
-					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="caterpillar.html">
-							<img src="img/caterpillar_square.png">
+							<img src="img/caterpillar_square.jpg">
 							<div class="title">(My) Very Hungry Caterpillar</div>
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="crua.html">
-							<img src="img/crua_square.png">
+							<img src="img/crua_square.jpg">
 							<div class="title">O Auto da Barca do Inferno</br>The act of the Hell's Ship</div>
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="soskit.html">
-							<img src="img/soskit_square.png">
+							<img src="img/soskit_square.jpg">
 							<div class="title">S.O.S dyslexia kit - for parents and children</div>
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="watches.html">
-							<img src="img/watches_square.png">
-							<div class="title">Thematic Watches</div>
+						<a class="w-inline-block photo-link-block" href="montanha.html">
+							<img src="img/montanha_square.jpg">
+							<div class="title">Webpage</div>
 						</a>
 					</div>
 				</div>
