--- a/caterpillar.html
+++ b/caterpillar.html
@@ -1,81 +1,71 @@
 <!DOCTYPE html>
 <head>
 	<meta charset="utf-8">
-	<title>Sans_(My)VeryHungryCaterpillar</title>
+	<title>Sans</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
-	<link rel="stylesheet" href="css/cssSlide.css">
 	<link href="https://fonts.googleapis.com/css?family=Fira+Mono|Fira+Sans" rel="stylesheet">
-	<script type="text/javascript" src="js/modernizr-2.7.1.js"></script>
-	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
-	<link rel="apple-touch-icon" href="img/webclip.png">
+<script type="text/javascript" src="js/modernizr-2.7.1.js"></script>
+<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
+<link rel="apple-touch-icon" href="img/webclip.jpg">
 </head>
 
 <body>
 	<div class="w-nav navigation-bar" data-collapse="medium" data-animation="default" data-duration="400" data-contain="1">
 		<div class="w-container">
 			<a class="w-nav-brand brand-link" href="index.html">
-			<h1 class="brand-text">Sans.</h1></a>
-		<nav class="w-nav-menu navigation-menu" role="navigation">
-			<a style="color:#00bfa5;font-weight:bold;" class="w-nav-link navigation-link" href="index.html">Work</a>
-			<a style="color:silver" class="w-nav-link navigation-link" href="about.html">About</a>
+				<h1 class="brand-text">Sans.</h1>
+			</a>
+			<nav class="w-nav-menu navigation-menu" role="navigation">
+				<a style="color:#00bfa5;font-weight:bold;" class="w-nav-link navigation-link w--current" href="index.html">Work</a>
+				<a class="w-nav-link navigation-link" href="about.html">About</a>
 		</nav>
-		<div class="w-nav-button hamburger-button">
-			<div class="w-icon-nav-menu"></div>
+			<div class="w-nav-button hamburger-button">
+				<div class="w-icon-nav-menu"></div>
+			</div>
 		</div>
-	</div>
 	</div>
 	<div class="w-section section">
 		<div class="w-container">
-			<div class="container">
-    <div id="slides">
-      <img src="img/caterpillar01.png" alt="caterpillarCover">
-      <img src="img/caterpillar02.png" alt="bigCaterpillar">
-      <img src="img/caterpillar03.png" alt="messyCaterpillar">
-      <img src="img/caterpillarBook.png" alt="theBook">
-    </div>
-  </div>
-			<div class="photo-info-wrapper">
-				<h1 class="photo-page-title">The Very Hungry Caterpillar</h1>
+			<img src="img/caterpillar01.jpg">
+			<h1 class="photo-page-title">(My) Very Hungry Caterpillar</h1>
 				<div class="photo-info-text"></div>
 				<div class="w-richtext photo-text">
-					<p>My reedition of “The Very Hungry Caterpillar”, 1969, Eric Carle.</br>Original Title: Die Kleine Raupe Nimmersatt. Project and Illustration by Eric Carle.</p>
+					<p>My reedition of “The Very Hungry Caterpillar”, 1969, Eric Carle.</br>Original Title: Die Kleine Raupe Nimmersatt. Project and Illustration by Eric Carle.<br>I really love this book and I'm a big fan of Eric Carle's work.</p>
 					<p>
 				</div>
-			</div>
+			<img src="img/caterpillar02.jpg" style="padding-top:30px">
+			<img src="img/caterpillar03.jpg" style="padding-top:10px">
+			<img src="img/caterpillarBook.jpg" style="padding-top:10px">
 		</div>
+	</div>
+
 		<div class="w-container all-images">
 			<h1 class="photo-page-title">All Works</h1>
 			<div class="w-dyn-list gallery-wrapper">
 				<div class="w-dyn-items w-row">
 					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="boyfish.html">
-							<img src="img/boyfish_square.png">
+							<img src="img/boyfish_square.jpg">
 							<div class="title">O Rapaz e o Peixe</br>The Boy and the Fish</div>
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="caterpillar.html">
-							<img src="img/caterpillar_square.png">
-							<div class="title">(My) Very Hungry Caterpillar</div>
-						</a>
-					</div>
-					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="crua.html">
-							<img src="img/crua_square.png">
+							<img src="img/crua_square.jpg">
 							<div class="title">O Auto da Barca do Inferno</br>The act of the Hell's Ship</div>
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="soskit.html">
-							<img src="img/soskit_square.png">
+							<img src="img/soskit_square.jpg">
 							<div class="title">S.O.S dyslexia kit - for parents and children</div>
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="watches.html">
-							<img src="img/watches_square.png">
-							<div class="title">Thematic Watches</div>
+						<a class="w-inline-block photo-link-block" href="montanha.html">
+							<img src="img/montanha_square.jpg">
+							<div class="title">Webpage</div>
 						</a>
 					</div>
 				</div>
