--- a/VDF.html
+++ b/VDF.html
@@ -17,7 +17,7 @@
 				<h1 class="brand-text">Sans.</h1>
 			</a>
 			<nav class="w-nav-menu navigation-menu" role="navigation">
-				<a class="w-nav-link navigation-link w--current" href="index.html">Work</a>
+				<a style="color:#00bfa5;font-weight:bold;" class="w-nav-link navigation-link w--current" href="index.html">Work</a>
 				<a class="w-nav-link navigation-link" href="about.html">About</a>
 		</nav>
 			<div class="w-nav-button hamburger-button">
@@ -27,14 +27,20 @@
 	</div>
 	<div class="w-section section">
 		<div class="w-container">
-			<div class="w-dyn-list">
+			<img src="img/HomeControl01.jpg">
+			<h1 class="photo-page-title">Smart Router</br>Vodafone PT App</h1>
+				<div class="w-richtext photo-text">
+					<p>The aim of this app is to simplify and dismitify basic configurations from everyday equipments used by the clientes.<br>We wanted this app to be accessibel to everyone. To be easy to use and interact with, and also simple and clean. An app that causes curiosity on its users and make them want to see what has chenged when updated.</p>
+					<p><a href="http://www.vodafone.pt/main/particulares/apps/smart-router.htm" target="_blank" class="action-button">LAUNCH PROJECT FROM VODAFONE'S WEBSITE</a></p>
+				</div>
+			<img src="img/HomeControl02.jpg" style="padding-top:30px">
+		</div>
+	</div>
+
+		<div class="w-container all-images">
+			<h1 class="photo-page-title">All Works</h1>
+			<div class="w-dyn-list gallery-wrapper">
 				<div class="w-dyn-items w-row">
-					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="boyfish.html">
-							<img src="img/boyfish_square.jpg">
-							<div class="title">O Rapaz e o Peixe</br>The Boy and the Fish</div>
-						</a>
-					</div>
 					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="caterpillar.html">
 							<img src="img/caterpillar_square.jpg">
@@ -56,13 +62,7 @@
 					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="montanha.html">
 							<img src="img/montanha_square.jpg">
-							<div class="title">Luís Montanha Webpage</div>
-						</a>
-					</div>
-					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="VDF.html">
-							<img src="img/vodafoneLogo.jpg">
-							<div class="title">Smart Router App</div>
+							<div class="title">Webpage</div>
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
@@ -89,7 +89,16 @@
 		<div class="footer-text">&copy; Vera Sans — 2016<br/>All rights reserved</div>
 	</div>
 <script type="text/javascript" src="js/jquery.min.js"></script>
-<script type="text/javascript" src="js/webflow.6a91f4eb8.js"></script>
-
+<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+<script src="js/jquery.slides.min.js"></script>
+<script>
+    $(function() {
+      $('#slides').slidesjs({
+        width: 940,
+        height: 528,
+        navigation: false
+      });
+    });
+ </script>
 </body>
 </html>
