update VDF and du

--- a/du.html
+++ b/du.html
@@ -40,6 +40,12 @@
 			<div class="w-dyn-list gallery-wrapper">
 				<div class="w-dyn-items w-row">
 					<div class="w-dyn-item w-col w-col-4">
+						<a class="w-inline-block photo-link-block" href="boyfish.html">
+							<img src="img/boyfish_square.jpg">
+							<div class="title">O Rapaz e o Peixe</br>The Boy and the Fish</div>
+						</a>
+					</div>
+					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="caterpillar.html">
 							<img src="img/caterpillar_square.jpg">
 							<div class="title">(My) Very Hungry Caterpillar</div>
