--- a/du.html
+++ b/du.html
@@ -30,7 +30,7 @@
 			<img src="img/du01.jpg">
 			<h1 class="photo-page-title">du Sales Portal</br>Visual improvements to the existing portal</h1>
 				<div class="w-richtext photo-text">
-					<p>du Sales Portal is a portal for direct and indirect channels, that is dedicated to activate mobile numbers, manage offers and customer documentation.<br>A platform that simplifies the customer sales processes. By streamlining recurring processes and focusing on relevant information, this portal was design to save time to its users.</p>
+					<p>du Sales Portal is a portal for direct and indirect channels, that is dedicated to activate mobile numbers, manage offers and customer documentation. A platform that simplifies the customer sales processes. By streamlining recurring processes and focusing on relevant information, this portal was design to save time to its users.<br>For this project I've made some visual improvements and I've created the user manuals for new agents. Where they can find a brief text about DSP, how it works and step by step explanation of the processes for sells agents. In adition to the manual, I've made an interactive HTML+JS presentation of the project with explanatory videos.</p>
 				</div>
 		</div>
 	</div>
