--- a/VDF.html
+++ b/VDF.html
@@ -30,7 +30,7 @@
 			<img src="img/HomeControl01.jpg">
 			<h1 class="photo-page-title">Smart Router</br>Vodafone PT App</h1>
 				<div class="w-richtext photo-text">
-					<p>The aim of this app is to simplify and dismitify basic configurations from everyday equipments used by the clientes.<br>We wanted this app to be accessibel to everyone. To be easy to use and interact with, and also simple and clean. An app that causes curiosity on its users and make them want to see what has chenged when updated.</p>
+					<p>The aim of this app is to simplify and dismitify basic configurations from everyday equipments used by the clients.<br>We wanted this app to be accessible to everyone. To be easy to use and interact with, and also simple and clean. An app that causes curiosity on its users and make them want to see what has changed after an update.</p>
 					<p><a href="http://www.vodafone.pt/main/particulares/apps/smart-router.htm" target="_blank" class="action-button">LAUNCH PROJECT FROM VODAFONE'S WEBSITE</a></p>
 				</div>
 			<img src="img/HomeControl02.jpg" style="padding-top:30px">
