traveling in | du out

--- a/VDF.html
+++ b/VDF.html
@@ -28,7 +28,7 @@
 	<div class="w-section section">
 		<div class="w-container">
 			<img src="img/HomeControl01.jpg">
-			<h1 class="photo-page-title">Smart Router</br>Vodafone PT App</h1>
+			<h1 class="photo-page-title">Smart Router | Vodafone PT App</h1>
 				<div class="w-richtext photo-text">
 					<p>The aim of this app is to simplify and dismitify basic configurations from everyday equipments used by the clients.<br>We wanted this app to be accessible to everyone. To be easy to use and interact with, and also simple and clean. An app that causes curiosity on its users and make them want to see what has changed after an update.</p>
 					<p><a href="http://www.vodafone.pt/main/particulares/apps/smart-router.htm" target="_blank" class="action-button">LAUNCH PROJECT FROM VODAFONE'S WEBSITE</a></p>
@@ -42,9 +42,27 @@
 			<div class="w-dyn-list gallery-wrapper">
 				<div class="w-dyn-items w-row">
 					<div class="w-dyn-item w-col w-col-4">
+						<a class="w-inline-block photo-link-block" href="travel.html">
+							<img src="img/travel.jpg">
+							<div class="title">Traveling</div>
+						</a>
+					</div>
+					<div class="w-dyn-item w-col w-col-4">
+						<a class="w-inline-block photo-link-block" href="crua.html">
+							<img src="img/crua_square.jpg">
+							<div class="title">The act of the Hell's Ship</div>
+						</a>
+					</div>
+					<div class="w-dyn-item w-col w-col-4">
+						<a class="w-inline-block photo-link-block" href="montanha.html">
+							<img src="img/montanha_square.jpg">
+							<div class="title">Luís Montanha Webpage</div>
+						</a>
+					</div>
+					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="boyfish.html">
 							<img src="img/boyfish_square.jpg">
-							<div class="title">O Rapaz e o Peixe</br>The Boy and the Fish</div>
+							<div class="title">The Boy and the Fish</div>
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
@@ -54,29 +72,11 @@
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="crua.html">
-							<img src="img/crua_square.jpg">
-							<div class="title">O Auto da Barca do Inferno</br>The act of the Hell's Ship</div>
-						</a>
-					</div>
-					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="soskit.html">
 							<img src="img/soskit_square.jpg">
 							<div class="title">S.O.S dyslexia kit - for parents and children</div>
 						</a>
-					</div>
-					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="montanha.html">
-							<img src="img/montanha_square.jpg">
-							<div class="title">Webpage</div>
-						</a>
-					</div>
-					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="du.html">
-							<img src="img/duLogo.jpg">
-							<div class="title">du Sales Portal</div>
-						</a>
-					</div>
+					</div>					
 				</div>
 			</div>
 		</div>
