--- a/soskit.html
+++ b/soskit.html
@@ -33,9 +33,9 @@
 				<div class="w-richtext photo-text">
 					<p>Project by Sara Miguel for UTAD - University of Trás-os-Montes e Alto Douro, Vila Real, Portugal.<br>Texts by Sara Miguel<br>Illustration and edition by me<br> - This handbook is part of a kit, as well as some games and challenges, that was created to help children with dyslexia and their parents to deal with this difficulty.<br>The book tells a story about a girl named Lexia, and her only friend, Mr. Green, a ball of green wool. Lexia has no friends at school, other kids think she's different, so, Mr. Green is helping Lexia surpass her difficulty.</p>
 			</div>
-			<img src="img/sosKit01.jpg" >
-			<img src="img/sosKit02.jpg" >
-			<img src="img/sosKit03.jpg" >
+			<img src="img/sosKit01.jpg" style="padding-top:30px">
+			<img src="img/sosKit02.jpg" style="padding-top:10px">
+			<img src="img/sosKit03.jpg" style="padding-top:10px">
 		</div>
 	</div>
 			
@@ -44,27 +44,39 @@
 			<div class="w-dyn-list gallery-wrapper">
 				<div class="w-dyn-items w-row">
 					<div class="w-dyn-item w-col w-col-4">
+						<a class="w-inline-block photo-link-block" href="travel.html">
+							<img src="img/travel.jpg">
+							<div class="title">Traveling</div>
+						</a>
+					</div>
+					<div class="w-dyn-item w-col w-col-4">
+						<a class="w-inline-block photo-link-block" href="crua.html">
+							<img src="img/crua_square.jpg">
+							<div class="title">The act of the Hell's Ship</div>
+						</a>
+					</div>
+					<div class="w-dyn-item w-col w-col-4">
+						<a class="w-inline-block photo-link-block" href="montanha.html">
+							<img src="img/montanha_square.jpg">
+							<div class="title">Luís Montanha Webpage</div>
+						</a>
+					</div>
+					<div class="w-dyn-item w-col w-col-4">
+						<a class="w-inline-block photo-link-block" href="VDF.html">
+							<img src="img/vodafoneLogo.jpg">
+							<div class="title">Smart Router App</div>
+						</a>
+					</div>
+					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="boyfish.html">
 							<img src="img/boyfish_square.jpg">
-							<div class="title">O Rapaz e o Peixe</br>The Boy and the Fish</div>
+							<div class="title">The Boy and the Fish</div>
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="caterpillar.html">
 							<img src="img/caterpillar_square.jpg">
 							<div class="title">(My) Very Hungry Caterpillar</div>
-						</a>
-					</div>
-					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="crua.html">
-							<img src="img/crua_square.jpg">
-							<div class="title">O Auto da Barca do Inferno</br>The act of the Hell's Ship</div>
-						</a>
-					</div>
-					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="montanha.html">
-							<img src="img/montanha_square.jpg">
-							<div class="title">Webpage</div>
 						</a>
 					</div>
 				</div>
