--- a/boyfish.html
+++ b/boyfish.html
@@ -28,7 +28,7 @@
 	<div class="w-section section">
 		<div class="w-container">
 			<img src="img/boyfishfamily.jpg">
-			<h1 class="photo-page-title">O RAPAZ E O PEIXE</br>(The Boy and the Fish)</h1>
+			<h1 class="photo-page-title">O RAPAZ E O PEIXE</br>The Boy and the Fish</h1>
 				<div class="w-richtext photo-text">
 					<p>Set of illustrations to support the making of the film: 'The boy and the fish'. This was the final project of the course of cinema, by the filmmaker Lu&iacute;s Montanha.</p>
 					<p><a href="http://orapazeopeixe.wordpress.com/" target="_blank" class="action-button">LAUNCH PROJECT</a></p>
@@ -43,27 +43,39 @@
 			<div class="w-dyn-list gallery-wrapper">
 				<div class="w-dyn-items w-row">
 					<div class="w-dyn-item w-col w-col-4">
+						<a class="w-inline-block photo-link-block" href="travel.html">
+							<img src="img/travel.jpg">
+							<div class="title">Traveling</div>
+						</a>
+					</div>
+					<div class="w-dyn-item w-col w-col-4">
+						<a class="w-inline-block photo-link-block" href="crua.html">
+							<img src="img/crua_square.jpg">
+							<div class="title">The act of the Hell's Ship</div>
+						</a>
+					</div>
+					<div class="w-dyn-item w-col w-col-4">
+						<a class="w-inline-block photo-link-block" href="montanha.html">
+							<img src="img/montanha_square.jpg">
+							<div class="title">Luís Montanha Webpage</div>
+						</a>
+					</div>
+					<div class="w-dyn-item w-col w-col-4">
+						<a class="w-inline-block photo-link-block" href="VDF.html">
+							<img src="img/vodafoneLogo.jpg">
+							<div class="title">Smart Router App</div>
+						</a>
+					</div>
+					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="caterpillar.html">
 							<img src="img/caterpillar_square.jpg">
 							<div class="title">(My) Very Hungry Caterpillar</div>
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="crua.html">
-							<img src="img/crua_square.jpg">
-							<div class="title">O Auto da Barca do Inferno</br>The act of the Hell's Ship</div>
-						</a>
-					</div>
-					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="soskit.html">
 							<img src="img/soskit_square.jpg">
 							<div class="title">S.O.S dyslexia kit - for parents and children</div>
-						</a>
-					</div>
-					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="montanha.html">
-							<img src="img/montanha_square.jpg">
-							<div class="title">Webpage</div>
 						</a>
 					</div>
 				</div>
