--- a/crua.html
+++ b/crua.html
@@ -42,9 +42,27 @@
 			<div class="w-dyn-list gallery-wrapper">
 				<div class="w-dyn-items w-row">
 					<div class="w-dyn-item w-col w-col-4">
+						<a class="w-inline-block photo-link-block" href="travel.html">
+							<img src="img/travel.jpg">
+							<div class="title">Traveling</div>
+						</a>
+					</div>
+					<div class="w-dyn-item w-col w-col-4">
+						<a class="w-inline-block photo-link-block" href="montanha.html">
+							<img src="img/montanha_square.jpg">
+							<div class="title">Luís Montanha Webpage</div>
+						</a>
+					</div>
+					<div class="w-dyn-item w-col w-col-4">
+						<a class="w-inline-block photo-link-block" href="VDF.html">
+							<img src="img/vodafoneLogo.jpg">
+							<div class="title">Smart Router App</div>
+						</a>
+					</div>
+					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="boyfish.html">
 							<img src="img/boyfish_square.jpg">
-							<div class="title">O Rapaz e o Peixe</br>The Boy and the Fish</div>
+							<div class="title">The Boy and the Fish</div>
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
@@ -57,12 +75,6 @@
 						<a class="w-inline-block photo-link-block" href="soskit.html">
 							<img src="img/soskit_square.jpg">
 							<div class="title">S.O.S dyslexia kit - for parents and children</div>
-						</a>
-					</div>
-					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="montanha.html">
-							<img src="img/montanha_square.jpg">
-							<div class="title">Webpage</div>
 						</a>
 					</div>
 				</div>
