--- a/du.html
+++ b/du.html
@@ -93,16 +93,7 @@
 		<div class="footer-text">&copy; Vera Sans — 2016<br/>All rights reserved</div>
 	</div>
 <script type="text/javascript" src="js/jquery.min.js"></script>
-<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-<script src="js/jquery.slides.min.js"></script>
-<script>
-    $(function() {
-      $('#slides').slidesjs({
-        width: 940,
-        height: 528,
-        navigation: false
-      });
-    });
- </script>
+<script type="text/javascript" src="js/webflow.6a91f4eb8.js"></script>
+
 </body>
 </html>
