--- a/fun.html
+++ b/fun.html
@@ -31,9 +31,33 @@
 			<div class="w-dyn-list">
 				<div class="w-dyn-items w-row">
 					<div class="w-dyn-item w-col w-col-4">
+						<a class="w-inline-block photo-link-block" href="travel.html">
+							<img src="img/travel.jpg">
+							<div class="title">Traveling</div>
+						</a>
+					</div>
+					<div class="w-dyn-item w-col w-col-4">
+						<a class="w-inline-block photo-link-block" href="crua.html">
+							<img src="img/crua_square.jpg">
+							<div class="title">The act of the Hell's Ship</div>
+						</a>
+					</div>
+					<div class="w-dyn-item w-col w-col-4">
+						<a class="w-inline-block photo-link-block" href="montanha.html">
+							<img src="img/montanha_square.jpg">
+							<div class="title">Luís Montanha Webpage</div>
+						</a>
+					</div>
+					<div class="w-dyn-item w-col w-col-4">
+						<a class="w-inline-block photo-link-block" href="VDF.html">
+							<img src="img/vodafoneLogo.jpg">
+							<div class="title">Smart Router App</div>
+						</a>
+					</div>
+					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="boyfish.html">
 							<img src="img/boyfish_square.jpg">
-							<div class="title">O Rapaz e o Peixe</br>The Boy and the Fish</div>
+							<div class="title">The Boy and the Fish</div>
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
