--- a/soskit - Copy.html
+++ b/soskit - Copy.html
@@ -17,7 +17,7 @@
 				<h1 class="brand-text">Sans.</h1>
 			</a>
 			<nav class="w-nav-menu navigation-menu" role="navigation">
-				<a style="color:#00bfa5;font-weight:bold;" class="w-nav-link navigation-link w--current" href="index.html">Work</a>
+				<a class="w-nav-link navigation-link w--current" href="index.html">Work</a>
 				<a class="w-nav-link navigation-link" href="about.html">About</a>
 		</nav>
 			<div class="w-nav-button hamburger-button">
@@ -27,19 +27,18 @@
 	</div>
 	<div class="w-section section">
 		<div class="w-container">
-			<img src="img/caterpillar01.jpg">
-			<h1 class="photo-page-title">(My) Very Hungry Caterpillar</h1>
+			<img src="img/sosKit04.jpg">
+			<h1 class="photo-page-title">S.O.S dyslexia kit - for parents and children</h1>
 				<div class="photo-info-text"></div>
 				<div class="w-richtext photo-text">
-					<p>My reedition of “The Very Hungry Caterpillar”, 1969, Eric Carle.</br>Original Title: Die Kleine Raupe Nimmersatt. Project and Illustration by Eric Carle.<br>I really love this book and I'm a big fan of Eric Carle's work.</p>
-					<p>
-				</div>
-			<img src="img/caterpillar02.jpg" style="padding-top:30px">
-			<img src="img/caterpillar03.jpg" style="padding-top:10px">
-			<img src="img/caterpillarBook.jpg" style="padding-top:10px">
+					<p>Project by Sara Miguel for UTAD - University of Trás-os-Montes e Alto Douro, Vila Real, Portugal.<br>Texts by Sara Miguel<br>Illustration and edition by me<br> - This handbook is part of a kit, as well as some games and challenges, that was created to help children with dyslexia and their parents to deal with this difficulty.<br>The book tells a story about a girl named Lexia, and her only friend, Mr. Green, a ball of green wool. Lexia has no friends at school, other kids think she's different, so, Mr. Green is helping Lexia surpass her difficulty.</p>
+			</div>
+			<img src="img/sosKit01.jpg" style="padding-top:30px">
+			<img src="img/sosKit02.jpg" style="padding-top:10px">
+			<img src="img/sosKit03.jpg" style="padding-top:10px">
 		</div>
 	</div>
-
+			
 		<div class="w-container all-images">
 			<h1 class="photo-page-title">All Works</h1>
 			<div class="w-dyn-list gallery-wrapper">
@@ -75,9 +74,9 @@
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="soskit.html">
-							<img src="img/soskit_square.jpg">
-							<div class="title">S.O.S dyslexia kit - for parents and children</div>
+						<a class="w-inline-block photo-link-block" href="caterpillar.html">
+							<img src="img/caterpillar_square.jpg">
+							<div class="title">(My) Very Hungry Caterpillar</div>
 						</a>
 					</div>
 				</div>
