--- a/soskit.html
+++ b/soskit.html
@@ -87,26 +87,17 @@
 		<div class="w-container">
 			<div>
 				<a class="w-inline-block social-icon-link" href="https://www.instagram.com/verasans/" target="_blank" alt="instagram">
-					<img width="35" src="img/instagram.svg" alt="instagram">
+					<img width="35" src="img/instagram.svg">
 				</a>
 				<a class="w-inline-block social-icon-link" href="mailto:veraifos@gmail.com" alt="contact me">
-					<img width="30" src="img/contact.svg" alt="contact me">
+					<img width="30" src="img/contact.svg">
 				</a>
 			</div>
 		</div>
 		<div class="footer-text">&copy; Vera Sans — 2016<br/>All rights reserved</div>
 	</div>
 <script type="text/javascript" src="js/jquery.min.js"></script>
-<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-<script src="js/jquery.slides.min.js"></script>
-<script>
-    $(function() {
-      $('#slides').slidesjs({
-        width: 940,
-        height: 528,
-        navigation: false
-      });
-    });
- </script>
+<script type="text/javascript" src="js/webflow.6a91f4eb8.js"></script>
+
 </body>
 </html>
