--- a/travel.html
+++ b/travel.html
@@ -27,17 +27,17 @@
 	</div>
 	<div class="w-section section">
 		<div class="w-container">
-			<img src="img/loveyou.jpg" alt="Amsterdam, Netherlands">
+			<img src="img/loveyou.jpg" title="Amsterdam, Netherlands">
 			<h1 class="photo-page-title">Traveling</h1>
 				<div class="photo-info-text"></div>
 				<div class="w-richtext photo-text">
 					<p>Series of illustrations from the countries that I've visited in the past two years.<br>The illustrations
 						have photos that I took to food, textures, architecture, landscaping, and so on.</p>
 			</div>
-			<img src="img/cheese.jpg" alt="Amsterdam, Netherlands" style="padding-top:30px">
-			<img src="img/waffle.jpg" alt="Amsterdam, Netherlands" style="padding-top:10px">
-			<img src="img/dubai.jpg" alt="Dubai, UEA" style="padding-top:10px">
-			<img src="img/pizza.jpg" alt="Milan, Italy" style="padding-top:10px">
+			<img src="img/cheese.jpg" title="Amsterdam, Netherlands" style="padding-top:30px">
+			<img src="img/waffle.jpg" title="Amsterdam, Netherlands" style="padding-top:10px">
+			<img src="img/dubai.jpg" title="Dubai, UEA" style="padding-top:10px">
+			<img src="img/pizza.jpg" title="Milan, Italy" style="padding-top:10px">
 		</div>
 	</div>
 			
@@ -89,26 +89,17 @@
 		<div class="w-container">
 			<div>
 				<a class="w-inline-block social-icon-link" href="https://www.instagram.com/verasans/" target="_blank" alt="instagram">
-					<img width="35" src="img/instagram.svg" alt="instagram">
+					<img width="35" src="img/instagram.svg">
 				</a>
 				<a class="w-inline-block social-icon-link" href="mailto:veraifos@gmail.com" alt="contact me">
-					<img width="30" src="img/contact.svg" alt="contact me">
+					<img width="30" src="img/contact.svg">
 				</a>
 			</div>
 		</div>
 		<div class="footer-text">&copy; Vera Sans — 2016<br/>All rights reserved</div>
 	</div>
 <script type="text/javascript" src="js/jquery.min.js"></script>
-<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-<script src="js/jquery.slides.min.js"></script>
-<script>
-    $(function() {
-      $('#slides').slidesjs({
-        width: 940,
-        height: 528,
-        navigation: false
-      });
-    });
- </script>
+<script type="text/javascript" src="js/webflow.6a91f4eb8.js"></script>
+
 </body>
 </html>
